# relaxed_ik_core

./: .gitignore  Cargo.toml  README.md
config/: env_collision  loaded_robot  objective_mode  settings.yaml
config/collision_files/: collision_panda.yaml  collision_sawyer.yaml  collision_yumi.yaml
config/collision_inputs_and_outputs/ur5/: 0.pkl  1.pkl  10.pkl  100.pkl  101.pkl  102.pkl  103.pkl  104.pkl  105.pkl  106.pkl  107.pkl  108.pkl  109.pkl  11.pkl  110.pkl  111.pkl  112.pkl  113.pkl  114.pkl  115.pkl  116.pkl  117.pkl  118.pkl  119.pkl  12.pkl  120.pkl  121.pkl  122.pkl  123.pkl  124.pkl  125.pkl  126.pkl  127.pkl  128.pkl  129.pkl  13.pkl  130.pkl  131.pkl  132.pkl  133.pkl  (+160 more)
config/collision_inputs_and_outputs/yumi/: 0.pkl  1.pkl  10.pkl  100.pkl  101.pkl  102.pkl  103.pkl  104.pkl  105.pkl  106.pkl  107.pkl  108.pkl  109.pkl  11.pkl  110.pkl  111.pkl  112.pkl  113.pkl  (+182 more)
config/collision_nn_python/: panda_nn  ur5_nn  yumi_nn
config/collision_nn_rust/: panda_nn  panda_nn.yaml  panda_nn_jointpoint  panda_nn_jointpoint.yaml  ur5_nn  ur5_nn.yaml  ur5_nn_jointpoint  ur5_nn_jointpoint.yaml  yumi_nn  yumi_nn.yaml
config/env_collision_files/: bun4.pcd  env_collision_baxter.yaml  env_collision_hubo.yaml  env_collision_jaco7.yaml  env_collision_panda.yaml  env_collision_sawyer.yaml  env_collision_ur5.yaml  env_collision_yumi.yaml
config/info_files/: baxter_info.yaml  hubo8_info.yaml  hubo_info.yaml  iiwa7_info.yaml  jaco7_info.yaml  panda_info.yaml  sawyer_info.yaml  ur5_info.yaml  yumi_info.yaml
config/joint_state_define_functions/: ur5_joint_state_define
config/urdfs/: panda.urdf
configs/example_settings/: baxter.yaml  fetch.yaml  jaco.yaml  mobile_spot_arm.yaml  panda.yaml  sawyer.yaml  shadow_hand.yaml  spot_arm.yaml  ur5.yaml  ur5e.yaml
configs/urdfs/: baxter.urdf  jaco.urdf  mobile_spot_arm.urdf  panda.urdf  sawyer.urdf  shadow_hand.urdf  spot_arm.urdf  ur5.urdf  ur5e.urdf
docs/: index.html  index.xml  sitemap.xml
docs/categories/: index.html  index.xml
docs/css/: landing-page.css
docs/post/: index.html  index.xml
docs/tags/: index.html  index.xml
hugo/: .gitmodules  config.toml
src/: lib.rs  relaxed_ik.rs  relaxed_ik_coppeliasim.rs  relaxed_ik_node_ros2.rs  relaxed_ik_ros1.rs  relaxed_ik_ros2.rs  relaxed_ik_unity.rs  relaxed_ik_web.rs  relaxed_ik_wrapper.rs
src/groove/: collision_nn.rs  env_collision.rs  groove.rs  mod.rs  objective.rs  objective_master.rs  tools.rs  vars.rs
src/spacetime/: arm.rs  robot.rs
src/utils_rust/: collision_object.rs  file_utils.rs  mod.rs  robot_shape_model.rs  sampler.rs  self_collision_engine.rs  shape_parser_utils.rs  transformations.rs  yaml_utils.rs
tests/: regression_test.rs  ur5_regression_test.rs
wrappers/: python_wrapper.py
(+70 files in other folders)
