[package]
name = "relaxed_ik_core"
version = "0.1.0"
authors = ["djrakita <djrakita@gmail.com>", "yepw <yepingw@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30"
yaml-rust = "0.4"
optimization_engine = "0.6.0"
ndarray = "0.13.0"
num = "0.2.0"
time = "0.1"
rand = "0.7.2"
# ncollide3d = "0.21.0"
parry3d-f64 = "0.8.0"
path-slash = "0.1.2"
lazy_static = "1.4.0"
csv = "1.1.6"
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
dirs = "4.0.0"
urdf-rs =  "0.6.7"
k = "0.29"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[lib]
name = "relaxed_ik_lib"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]
